Mon Jan 16 11:22:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_chsize): no need to get the current file size.

Mon Jan 16 00:41:33 2012  Sokolov Yura  <funny.falcon@gmail.com>

	* st.c: st use function instead of macro.  In my current
	  environment (Ubunu 11.04 32bit gcc-4.5.2) it gives 4%
	  performance improvement.

	  https://github.com/ruby/ruby/pull/77

Sun Jan 15 14:09:48 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* object.c (rb_inspect): raise the result is not compatible with
	  the default external encoding. [ruby-core:42095] [Bug #5848]
	  If the default external encoding is ASCII compatible, the encoding of
	  inspected result must be compatible with it.
	  If the default external encoding is ASCII incomapatible,
	  the result must be ASCII only.

Sun Jan 15 13:21:50 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/parser/parser.rl (json_string_unescape): workaround fix
	  for over optimization of GCC 4.7. [ruby-core:42085] [Bug #5888]
	  http://gcc.gnu.org/bugzilla/show_bug.cgi?id=51862

Sat Jan 14 22:24:09 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/callback/mkcallback.rb (gencallback): suppress unused
	  variables.

Sat Jan 14 21:56:43 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseq_data_to_ary): check line info table boundary.  line
	  number 0 means no line number info is needed.  [ruby-dev:45130]
	  [Bug #5894]

Sat Jan 14 18:24:13 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* error.c (exc_equal): clear rb_thread_t::errinfo when ignore
	  an exception under rb_protect(). [ruby-core:41979] [Bug #5865]

Sat Jan 14 12:02:55 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_enc_vsprintf): relaxed the restriction.  since the
	  implementation deeply depends on plain char, so wchar_t based
	  encodings are not supported.

Sat Jan 14 12:00:20 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (exc_equal): ignore exceptions during implicit